data/derived/sp14/progs/unify/prog1323.ml.out
Characters 165-168:
  then palindrome tlr
                  ^^^
Error: This expression has type 'a list
       but an expression was expected of type string
